# dspy-tutorial

./: pyproject.toml
.devcontainer/: devcontainer.json
dependencies/: requirements.txt  uv_installation.sh
notebooks/: dspy-component-overview.ipynb  dspy-conceptual-overview.ipynb  dspy-mlx.ipynb  optimized_dspy_text_analyzer.json
