[project]
name = "my_project"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=2.6.8",
    "ipykernel>=6.29.5",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-core>=0.3.40",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.7",
    "langchain-text-splitters>=0.3.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "seaborn>=0.13.2",
]
